tests/parser/fail/unterminated-comment.som
"test:
failMessage:
  regex: comment .+ not terminated
"

UnterminatedComment = (
  test = ()
)

"hello world...
